Se cambio el color orange levemente

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@
 :root {
   --white: #fff;
   --white-100: #dfdfdf;
-  --orange: #b65506;
+  --orange: #d56407;
   --black: #0f0f0f;
   --black-100: #222222;
   --black-200: #232323;
