--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -105,6 +105,16 @@ body.active {
   overflow: hidden;
 }
 
+input::-webkit-input-placeholder {
+  color: gray;
+}
+
+input:-webkit-autofill {
+  background-color: var(
+    --orange
+  ) !important; /* Color de fondo después de seleccionar una opción */
+}
+
 /* HEADER - NAVBAR */
 
 header {
@@ -274,6 +284,72 @@ header {
   color: var(--black);
 }
 
+.nav__user .link__perfil {
+  display: none;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  border-radius: 50%;
+  font-size: 14px;
+  background-color: transparent;
+  color: var(--gray);
+  font-weight: bold;
+  text-align: center;
+  position: relative;
+}
+
+.nav__user .link__perfil .link__perfil-link svg {
+  color: var(--gray);
+  width: 30px;
+  height: 30px;
+}
+
+.nav__user .link__perfil:hover .submenu-perfil {
+  display: block;
+}
+
+.submenu-perfil {
+  display: none;
+  position: absolute;
+  top: 25px;
+  right: 0;
+  background: var(--black-100);
+  border: none;
+  z-index: 200;
+  margin-top: 4px;
+  width: 200px;
+  border-radius: 2px;
+  padding: 15px 0px 15px 0px;
+  border-radius: 5px;
+}
+
+.submenu-perfil li {
+  display: block;
+}
+
+.submenu-perfil li a {
+  color: var(--white);
+  text-decoration: none;
+  padding: 10px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 10px;
+}
+
+.submenu-perfil li a svg {
+  width: 20px;
+  height: 20px;
+  color: var(--gray);
+}
+.submenu-perfil li a:hover {
+  color: var(--orange);
+}
+
+.submenu-perfil li a:hover svg {
+  color: var(--orange);
+}
+
 .image_perfil {
   width: 50px;
   height: 50px;
@@ -376,11 +452,11 @@ header {
   width: 100%;
 }
 
-.container-login .login .login__form .input-validation {
+.input-validation {
   display: none;
 }
 
-.container-login .login .login__form .input-validation.error {
+.input-validation.error {
   display: block;
   color: rgb(243, 54, 54);
   font-size: 13px;
@@ -618,6 +694,10 @@ header {
   justify-content: center;
   gap: 10px;
   flex-direction: column;
+}
+
+#toast-container.toast-login {
+  top: 20px;
 }
 
 .toast {
@@ -1640,7 +1720,7 @@ header {
   width: 300px;
 }
 
-.cart__button-pay a {
+.cart__button-pay button {
   padding: 10px 20px;
   border: 1px solid var(--gray);
   background: transparent;
@@ -1655,9 +1735,119 @@ header {
   text-decoration: none;
 }
 
-.cart__button-pay a:hover {
+.cart__button-pay button:hover {
   background: var(--white);
   color: var(--black-50);
+}
+
+#modal-login {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.9);
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+#modal-login .content-modal {
+  display: flex;
+  width: 600px;
+  height: 500px;
+  align-items: center;
+  justify-content: center;
+  padding-block: 40px;
+  overflow: hidden;
+  background-color: var(--black);
+  position: relative;
+  overflow: visible;
+  border-radius: 5px;
+  border: 1px solid var(--black-50);
+  flex-direction: column;
+  gap: 20px;
+}
+
+#modal-login .content-modal .content-modal__title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+}
+
+#modal-login .content-modal .content-modal__title h2 {
+  font-size: 35px;
+  font-weight: bold;
+  color: var(--orange);
+  text-transform: uppercase;
+  background-clip: text;
+}
+
+#modal-login .content-modal .content-modal__text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 75%;
+}
+
+#modal-login .content-modal .content-modal__text p {
+  font-size: 14px;
+  color: var(--gray);
+}
+
+#modal-login .content-modal .content-modal__buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+#modal-login .content-modal .content-modal__buttons a {
+  padding: 10px 20px;
+  border: 1px solid var(--gray);
+  background: transparent;
+  color: var(--gray);
+  text-transform: uppercase;
+  border-radius: 20px;
+  font-weight: bold;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+#modal-login .content-modal .content-modal__buttons a:hover {
+  background: var(--white);
+  color: var(--black-50);
+}
+
+#modal-login .content-modal #close-modal {
+  position: relative;
+  top: -130px;
+  left: 300px;
+  cursor: pointer;
+  background-color: var(--black);
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid var(--black-50);
+}
+
+#modal-login .content-modal #close-modal:hover {
+  background-color: var(--black-50);
+}
+
+#modal-login .content-modal #close-modal svg {
+  width: 15px;
+  height: 15px;
+  color: var(--white);
 }
 
 /* END CART.HTML */
@@ -2113,9 +2303,9 @@ header {
   gap: 5px;
 }
 
-/*MODAL*/
+/*MODAL IMAGE */
 
-.modal {
+#modal-image {
   display: none;
   position: fixed;
   z-index: 1000;
@@ -2128,7 +2318,7 @@ header {
   background-color: rgba(0, 0, 0, 0.9);
 }
 
-.modal .image-container-modal {
+#modal-image .image-container-modal {
   margin: auto;
   display: flex;
   width: 90%;
@@ -2658,6 +2848,17 @@ header {
   justify-content: center;
   width: 100%;
   gap: 10px;
+}
+
+.container-register .register .register__form .form-group.col {
+  flex-direction: column;
+  align-items: start;
+}
+
+.container-register .register .register__form .form-group .form-group__group {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .container-register .register .register__form .form-group .form-group__input {
@@ -3360,6 +3561,10 @@ footer .contenedor-footer {
 
   .container-register .register .register__form .form-group {
     flex-direction: column;
+  }
+
+  .container-register .register .register__form .form-group .form-group__group {
+    width: 100%;
   }
 
   .contenedor-carousel .carousel-slide .carousel-slide__content {
